Selectively perform JNI registration in render processes on Android.

We currently register all JNI methods regardless of the process type
even though little JNI is needed in render processes. This patch
changes the JNI registration behavior for render processes so that
registration is only performed for Java classes that are annotated with
"@MainDex". Other Chrome processes, Webview, and Monochrome are not
affected by this change.

BUG=657024

Review-Url: https://codereview.chromium.org/2501193003
Cr-Commit-Position: refs/heads/master@{#447315}

Former-commit-id: 5b04fbad6a653550a4540b70c2aa9647222e672a