base/android/jni_utils.cc
@@ -5,7 +5,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/android/jni_utils.h"
 
-#include "base/android/jni_android.h"
 #include "base/android/scoped_java_ref.h"
 
 #include "jni/JNIUtils_jni.h"
@@ -15,6 +14,10 @@ namespace android {
 
 ScopedJavaLocalRef<jobject> GetClassLoader(JNIEnv* env) {
   return Java_JNIUtils_getClassLoader(env);
+}
+
+bool isSelectiveJniRegistrationEnabled(JNIEnv* env) {
+  return Java_JNIUtils_isSelectiveJniRegistrationEnabled(env);
 }
 
 }  // namespace android
