third_party/gvr-android-sdk/gvr_api_jni.h
@@ -1283,7 +1283,7 @@ static const JNINativeMethod kMethodsGvrApi[] = {
 };
 
 static bool RegisterNativesImpl(JNIEnv* env) {
-  if (base::android::IsManualJniRegistrationDisabled())
+  if (jni_generator::ShouldSkipJniRegistration(false))
     return true;
 
   const int kMethodsGvrApiSize = arraysize(kMethodsGvrApi);
