third_party/gvr-android-sdk/native_callbacks_jni.h
@@ -265,7 +265,7 @@ static const JNINativeMethod kMethodsNativeCallbacks[] = {
 };
 
 static bool RegisterNativesImpl(JNIEnv* env) {
-  if (base::android::IsManualJniRegistrationDisabled())
+  if (jni_generator::ShouldSkipJniRegistration(false))
     return true;
 
   const int kMethodsNativeCallbacksSize = arraysize(kMethodsNativeCallbacks);
